# neovim

./: .dekick_hvac.yml  .dekickrc.yml  .editorconfig  .env  .env.example  .eslintignore  .eslintrc  .gitignore  .gitlab-ci.yml  README.md  coc-settings.json  dev.sh  docker-compose.yml  init.lua  knexfile.ts  lazy-lock.json  openaikey  package.json  pyproject.toml  test.txt  tsconfig.json
.husky/: pre-push
assistance/: .editorconfig  package-lock.json  package.json
doc/: TODO.md
docker/: Dockerfile
docs/: code-review.md  features.md
lua/: .env  current-theme.lua
migrations/: 20201014112754_create_users_table.js  20201209174602_add_password_reset_fields_to_users.js  20210317123548_create_admins_table.js  20210318165530_make_email_unique_in_admins_table.js  20210319154422_add_deleted_at_to_admins_table.js  20210322130008_create_layouts_table.js  20210324150223_create_exams_table.js  20210324181637_create_exam-sections_table.js  20210326145017_create_exam_passages_table.js  20210329113300_create_questions_table.js  20210329191331_create_exam_questions_table.js  20210331080624_add_password_reset_fields_to_admins.js  20210331101820_add_external_id_to_exams.js  20210406082415_add_access_period_to_exams.js  20210406110804_add_exam_length_to_exams_table.ts  20210406140735_drop_unique_key_from_access_period_in_exams.js  20210407071701_add_deleted_at_to_exams.js  20210407090646_create_exam_log_table.js  20210407154247_add_name_and_created_at_to_admins.js  20210408112109_create_students_table.js  20210413095359_create_student_exams_table.js  (+480 more)
seeds/: 01_admins.js  (+21 more)
(+2592 files in other folders)
